# Replic-game-jetpack-joyride

./: CMakeLists.txt  DEVELOPER_GUIDE.md  README.md
src/: Global.hpp  background.cpp  background.hpp  coin.cpp  coin.hpp  entity.hpp  game.cpp  game.hpp  hud.cpp  hud.hpp  laser.cpp  laser.hpp  laserBeam.cpp  laserBeam.hpp  main.cpp  managerAllGame.cpp  managerAllGame.hpp  managerLayer.cpp  managerLayer.hpp  menu.cpp  menu.hpp  player.cpp  player.hpp
